tests/baselines/reference/callWithSpread4.errors.txt
tests/cases/conformance/expressions/functionCalls/callWithSpread4.ts(16,32): error TS2583: Cannot find name 'AsyncGenerator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/conformance/expressions/functionCalls/callWithSpread4.ts(19,5): error TS2557: Expected at least 1 arguments, but after 1, found a non-tuple spread that must be passed to a rest parameter.
tests/cases/conformance/expressions/functionCalls/callWithSpread4.ts(28,6): error TS2556: Expected 2 arguments, but after 0, found a non-tuple spread that must be passed to a rest parameter.


==== tests/cases/conformance/expressions/functionCalls/callWithSpread4.ts (3 errors) ====
    type R = { a: number }
    type W = { b: number }
    type RW = { a: number, b: number }
    declare const pli: {
        (s1: R, s2: RW, s3: RW, s4: RW, s5: W): Promise<void>;
        (streams: ReadonlyArray<R | W | RW>): Promise<void>;
        // commenting this out keeps the error the same, but provides definite ranges, which explains the weird bheaviour a little better
        (s1: R, s2: RW | W, ...streams: Array<RW | W>): Promise<void>;
    }
    
    declare var writes: W
    declare var reads: R
    declare var tr: W
    declare var gun: RW[]
    declare var gz: RW[]
    declare var fun: (inp: any) => AsyncGenerator<string, void, unknown>
                                   ~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncGenerator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    pli(
        reads,
        ...gun,
        ~~~~~~~
        tr,
    ~~~~~~~
        fun,
    ~~~~~~~~
        ...gz,
    ~~~~~~~~~~
        writes
    ~~~~~~~~~~
!!! error TS2557: Expected at least 1 arguments, but after 1, found a non-tuple spread that must be passed to a rest parameter.
    );
    
    declare function test(x: any, y: () => string): string | undefined;
    declare var anys: any[]
    test(...anys)
         ~~~~~~~
!!! error TS2556: Expected 2 arguments, but after 0, found a non-tuple spread that must be passed to a rest parameter.
!!! related TS6210 tests/cases/conformance/expressions/functionCalls/callWithSpread4.ts:26:23: An argument for 'x' was not provided.
    
    pli(...[reads, writes, writes] as const)
    